provided functionality to query by example and added support to identify a videosegment by time
