# ferelight/models/querybyexample.py
@@ -1,0 +1,95 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ferelight.models.base_model import Model
+from ferelight import util
+
+
+class Querybyexample(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, segmentid=None, k=None):  # noqa: E501
+        """Querybyexample - a model defined in OpenAPI
+
+        :param segmentid: The segmentid of this Querybyexample.  # noqa: E501
+        :type segmentid: str
+        :param k: The k of this Querybyexample.  # noqa: E501
+        :type k: int
+        """
+        self.openapi_types = {
+            'segmentid': str,
+            'k': int
+        }
+
+        self.attribute_map = {
+            'segmentid': 'segmentid',
+            'k': 'k'
+        }
+
+        self._segmentid = segmentid
+        self._k = k
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Querybyexample':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The querybyexample of this Querybyexample.  # noqa: E501
+        :rtype: Querybyexample
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def segmentid(self) -> str:
+        """Gets the segmentid of this Querybyexample.
+
+        The unique identifier of the segment.  # noqa: E501
+
+        :return: The segmentid of this Querybyexample.
+        :rtype: str
+        """
+        return self._segmentid
+
+    @segmentid.setter
+    def segmentid(self, segmentid: str):
+        """Sets the segmentid of this Querybyexample.
+
+        The unique identifier of the segment.  # noqa: E501
+
+        :param segmentid: The segmentid of this Querybyexample.
+        :type segmentid: str
+        """
+        if segmentid is None:
+            raise ValueError("Invalid value for `segmentid`, must not be `None`")  # noqa: E501
+
+        self._segmentid = segmentid
+
+    @property
+    def k(self) -> int:
+        """Gets the k of this Querybyexample.
+
+        Number of neighbors to retrieve.  # noqa: E501
+
+        :return: The k of this Querybyexample.
+        :rtype: int
+        """
+        return self._k
+
+    @k.setter
+    def k(self, k: int):
+        """Sets the k of this Querybyexample.
+
+        Number of neighbors to retrieve.  # noqa: E501
+
+        :param k: The k of this Querybyexample.
+        :type k: int
+        """
+        if k is None:
+            raise ValueError("Invalid value for `k`, must not be `None`")  # noqa: E501
+
+        self._k = k
