# ferelight/models/segmentbytime_database_post200_response.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ferelight.models.base_model import Model
+from ferelight import util
+
+
+class SegmentbytimeDatabasePost200Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, segmentid=None):  # noqa: E501
+        """SegmentbytimeDatabasePost200Response - a model defined in OpenAPI
+
+        :param segmentid: The segmentid of this SegmentbytimeDatabasePost200Response.  # noqa: E501
+        :type segmentid: str
+        """
+        self.openapi_types = {
+            'segmentid': str
+        }
+
+        self.attribute_map = {
+            'segmentid': 'segmentid'
+        }
+
+        self._segmentid = segmentid
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SegmentbytimeDatabasePost200Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _segmentbytime__database__post_200_response of this SegmentbytimeDatabasePost200Response.  # noqa: E501
+        :rtype: SegmentbytimeDatabasePost200Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def segmentid(self) -> str:
+        """Gets the segmentid of this SegmentbytimeDatabasePost200Response.
+
+        Matching segment ID  # noqa: E501
+
+        :return: The segmentid of this SegmentbytimeDatabasePost200Response.
+        :rtype: str
+        """
+        return self._segmentid
+
+    @segmentid.setter
+    def segmentid(self, segmentid: str):
+        """Sets the segmentid of this SegmentbytimeDatabasePost200Response.
+
+        Matching segment ID  # noqa: E501
+
+        :param segmentid: The segmentid of this SegmentbytimeDatabasePost200Response.
+        :type segmentid: str
+        """
+
+        self._segmentid = segmentid
